<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="temperature_converter" translatesAutoresizingMaskIntoConstraints="NO" id="9hv-hD-nBf">
                                <rect key="frame" x="67" y="60.5" width="240" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="240" id="ULe-ec-JBs"/>
                                    <constraint firstAttribute="height" constant="60" id="k5f-fD-ik1"/>
                                </constraints>
                            </imageView>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Wg5-Cy-zSs">
                                <rect key="frame" x="47" y="200.5" width="281" height="29"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="281" id="KbH-Ep-rqR"/>
                                    <constraint firstAttribute="height" constant="28" id="L1e-xS-ofI"/>
                                </constraints>
                                <segments>
                                    <segment title="Fahrenheit to Celsius"/>
                                    <segment title="Celsius to Fahrenheit"/>
                                </segments>
                            </segmentedControl>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2EM-S7-C0s">
                                <rect key="frame" x="139" y="288.5" width="97" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="97" id="6tf-b4-iGD"/>
                                    <constraint firstAttribute="height" constant="30" id="b51-hz-GbY"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hu8-V2-QuT">
                                <rect key="frame" x="139" y="348.5" width="97" height="21"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="7y3-xZ-dDd"/>
                                    <constraint firstAttribute="width" constant="97" id="D3b-RN-d0Q"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qfl-4q-5fA">
                                <rect key="frame" x="155" y="419.5" width="65" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="FGS-3p-0Wv"/>
                                    <constraint firstAttribute="width" constant="65" id="Syf-9L-cLh"/>
                                </constraints>
                                <state key="normal" title="Convert"/>
                                <connections>
                                    <action selector="convertTempeture:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RQT-dR-lQ3"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="9hv-hD-nBf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CUI-fV-SZg"/>
                            <constraint firstItem="hu8-V2-QuT" firstAttribute="top" secondItem="2EM-S7-C0s" secondAttribute="bottom" priority="800" constant="30" id="KCW-i5-QuG"/>
                            <constraint firstItem="hu8-V2-QuT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NBQ-nt-xBl"/>
                            <constraint firstItem="Wg5-Cy-zSs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Obv-ac-AUx"/>
                            <constraint firstItem="2EM-S7-C0s" firstAttribute="top" secondItem="Wg5-Cy-zSs" secondAttribute="bottom" priority="801" constant="60" id="TJU-aU-sjU"/>
                            <constraint firstItem="hu8-V2-QuT" firstAttribute="top" relation="greaterThanOrEqual" secondItem="2EM-S7-C0s" secondAttribute="bottom" constant="18" id="ahW-Me-InI"/>
                            <constraint firstItem="2EM-S7-C0s" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="b9J-LS-wAK"/>
                            <constraint firstItem="Wg5-Cy-zSs" firstAttribute="top" relation="greaterThanOrEqual" secondItem="9hv-hD-nBf" secondAttribute="bottom" constant="20" id="cBW-Eg-Hfz"/>
                            <constraint firstItem="Qfl-4q-5fA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eEO-e7-MVn"/>
                            <constraint firstItem="9hv-hD-nBf" firstAttribute="top" relation="greaterThanOrEqual" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="jRd-vS-5XB"/>
                            <constraint firstItem="Wg5-Cy-zSs" firstAttribute="top" secondItem="9hv-hD-nBf" secondAttribute="bottom" priority="800" constant="80" id="paJ-DN-aqp"/>
                            <constraint firstItem="2EM-S7-C0s" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Wg5-Cy-zSs" secondAttribute="bottom" constant="20" id="tYA-Xp-zCj"/>
                            <constraint firstItem="2EM-S7-C0s" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-30" id="u31-Fo-S3J"/>
                            <constraint firstItem="Qfl-4q-5fA" firstAttribute="top" secondItem="hu8-V2-QuT" secondAttribute="bottom" constant="50" id="yZa-S2-kKz"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="label" destination="hu8-V2-QuT" id="04n-9T-J5L"/>
                        <outlet property="segmentedControl" destination="Wg5-Cy-zSs" id="yNh-Y7-Ra2"/>
                        <outlet property="textField" destination="2EM-S7-C0s" id="Zwa-CC-Lqr"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
        </scene>
    </scenes>
    <resources>
        <image name="temperature_converter" width="257" height="40"/>
    </resources>
</document>
